// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigurationForm It doesn't allow the user to submit if the URL is invalid 1`] = `
<body>
  <div>
    <form
      class="css-1srg48i"
      data-testid="plugin-configuration-form"
    >
      <div
        class="info-block"
      >
        <p>
          1. Launch the OnCall backend
        </p>
        <span
          class="root text text--secondary text--medium"
        >
          Run hobby, dev or production backend. See
           
          <a
            href="https://github.com/grafana/oncall#getting-started"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="root text text--link text--medium"
            >
              here
            </span>
          </a>
           
          on how to get started.
        </span>
      </div>
      <div
        class="info-block"
      >
        <p>
          2. Let us know the base URL of your OnCall API
        </p>
        <span
          class="root text text--secondary text--medium"
        >
          The OnCall backend must be reachable from your Grafana installation. Some examples are:
          <br />
          - http://host.docker.internal:8080
          <br />
          - http://localhost:8080
        </span>
      </div>
      <div
        class="css-1rplq84"
      >
        <div
          class="css-l4ykjo-Label"
        >
          <label>
            <div
              class="css-70qvj9"
            >
              OnCall backend URL
            </div>
          </label>
        </div>
        <div>
          <div>
            <div
              class="css-1skhtb9-input-wrapper"
              data-testid="input-wrapper"
            >
              <div
                class="css-10lnb82-input-inputWrapper"
              >
                <input
                  class="css-11mwy6h-input-input"
                  data-testid="onCallApiUrl"
                  name="onCallApiUrl"
                />
              </div>
            </div>
          </div>
          <div
            class="css-1fhgjcy"
          >
            <div
              class="css-9z7wq3"
              role="alert"
            >
              <div
                class="css-1j2891d-Icon"
              />
              Must be a valid URL
            </div>
          </div>
        </div>
      </div>
      <button
        class="css-td06pi-button"
        disabled=""
        type="submit"
      >
        <span
          class="css-1riaxdn"
        >
          Connect
        </span>
      </button>
    </form>
  </div>
</body>
`;

exports[`ConfigurationForm It shows an error message if the self hosted plugin API call fails 1`] = `
<body>
  <div>
    <form
      class="css-1srg48i"
      data-testid="plugin-configuration-form"
    >
      <div
        class="info-block"
      >
        <p>
          1. Launch the OnCall backend
        </p>
        <span
          class="root text text--secondary text--medium"
        >
          Run hobby, dev or production backend. See
           
          <a
            href="https://github.com/grafana/oncall#getting-started"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="root text text--link text--medium"
            >
              here
            </span>
          </a>
           
          on how to get started.
        </span>
      </div>
      <div
        class="info-block"
      >
        <p>
          2. Let us know the base URL of your OnCall API
        </p>
        <span
          class="root text text--secondary text--medium"
        >
          The OnCall backend must be reachable from your Grafana installation. Some examples are:
          <br />
          - http://host.docker.internal:8080
          <br />
          - http://localhost:8080
        </span>
      </div>
      <div
        class="css-1rplq84"
      >
        <div
          class="css-l4ykjo-Label"
        >
          <label>
            <div
              class="css-70qvj9"
            >
              OnCall backend URL
            </div>
          </label>
        </div>
        <div>
          <div>
            <div
              class="css-1cvb0sk-input-wrapper"
              data-testid="input-wrapper"
            >
              <div
                class="css-10lnb82-input-inputWrapper"
              >
                <input
                  class="css-8tk2dk-input-input"
                  data-testid="onCallApiUrl"
                  name="onCallApiUrl"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <pre>
        <span
          class="root text text--link text--medium"
        >
          ohhh nooo there was an error from the OnCall API
        </span>
      </pre>
      <div
        class="root root--withBackGround info-block"
      >
        <span
          class="root text text--secondary text--medium"
        >
          Need help?
          <br />
          - Reach out to the OnCall team in the
           
          <a
            href="https://grafana.slack.com/archives/C02LSUUSE2G"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="root text text--link text--medium"
            >
              #grafana-oncall
            </span>
          </a>
           
          community Slack channel
          <br />
          - Ask questions on our GitHub Discussions page
           
          <a
            href="https://github.com/grafana/oncall/discussions/categories/q-a"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="root text text--link text--medium"
            >
              here
            </span>
          </a>
           
          <br />
          - Or file bugs on our GitHub Issues page
           
          <a
            href="https://github.com/grafana/oncall/issues"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="root text text--link text--medium"
            >
              here
            </span>
          </a>
        </span>
      </div>
      <button
        class="css-td06pi-button"
        type="submit"
      >
        <span
          class="css-1riaxdn"
        >
          Connect
        </span>
      </button>
    </form>
  </div>
</body>
`;
